# agentsnitch

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  PRD.md  README.md  architecture.md  contributing.md  go.mod  prd.md  readme.md  settings-advanced-snapshot.md  settings-developer-snapshot.md  settings-general-snapshot.md  settings-hooks-snapshot.md
.github/: dependabot.yml
config/: heuristics.go  heuristics.json  heuristics_test.go
docs/: advanced-https-inspect-mode.md  creature-animation-rive-plan.md  creature-rive-editor-guide.md  getting-started.md  release.md  subagent-detection-phase1.md  ui-ux-plan.md
extension/: AgentSnitchHostBridge.swift  AgentSnitchNetworkExtension.swift  AgentSnitchXPCProtocol.swift  INTEGRATION.md  Info.plist  build-extension.sh  entitlements.plist  integration.md  main.swift
schemas/: agentsnitch.event.schema.json
scripts/: check-deps.sh  check-network-extension-invariants.sh  check-stress-guardrail.sh  configure-release-gpg.sh  create.sh  ensure-release-environment-unlocked.sh  install.sh  normalize-tauri-schemas.sh  package-macos-dev.sh  package-macos-release.sh  release-notes-from-changelog.sh  test-network-extension-invariants.sh  uninstall.sh
testdata/: sample-claude-bash-egress.json  sample-claude-posttooluse.json  (+1 more)
ui/src-tauri/: Cargo.toml  Info.plist  build.rs  deny.toml  dev-entitlements.plist  entitlements.plist  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns  readme.md
ui/src-tauri/src/: lib.rs  main.rs
(+58 files in other folders)
